; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_cvar.c_Cvar_Reset_f.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_cvar.c_Cvar_Reset_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"usage: reset <variable>\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Cvar_Reset_f() #0 {
  %1 = call i32 (...) @Cmd_Argc()
  %2 = icmp ne i32 %1, 2
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @Com_Printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %8

5:                                                ; preds = %0
  %6 = call i32 @Cmd_Argv(i32 1)
  %7 = call i32 @Cvar_Reset(i32 %6)
  br label %8

8:                                                ; preds = %5, %3
  ret void
}

declare dso_local i32 @Cmd_Argc(...) #1

declare dso_local i32 @Com_Printf(i8*) #1

declare dso_local i32 @Cvar_Reset(i32) #1

declare dso_local i32 @Cmd_Argv(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
